--- a/AutofacProject/AutofacProject/AutofacProject.csproj
+++ b/AutofacProject/AutofacProject/AutofacProject.csproj
@@ -57,7 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
+    <!--<None Include="packages.config" />-->
+    <PackageReference Include="Autofac" Version="4.9.2" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
