--- a/AutofacProject/AutofacProject/AutofacProject.csproj
+++ b/AutofacProject/AutofacProject/AutofacProject.csproj
@@ -57,8 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <!--<None Include="packages.config" />-->
-    <PackageReference Include="Autofac" Version="4.9.2" />
+    <None Include="packages.config" />   
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
